--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -3,9 +3,11 @@
 @import "./breakpoint";
 @import "./components/block";
 @import "./components/tooltip";
+@import "./components/checkbox";
 @import "./components/title";
 @import "./components/accordion";
 @import "./components/input";
 @import "./components/btn";
 @import "./components/calc-item";
-@import "./components/tabs"
+@import "./components/tabs";
+@import "./components/select"
