--- a/src/assets/styles/components/_block.scss
+++ b/src/assets/styles/components/_block.scss
@@ -1,4 +1,5 @@
 .block {
+  margin-bottom: 20px;
   border: 1px solid $border-color;
   border-radius: $border-radius;
   padding: $pp;
@@ -15,6 +16,7 @@
   }
 
   &--second {
+    margin-bottom: 10px;
     padding: 10px;
   }
 }
