--- a/src/assets/styles/components/_input.scss
+++ b/src/assets/styles/components/_input.scss
@@ -11,7 +11,10 @@ input[type="number"] {
   border: 1px solid $dark-color;
   border-radius: $border-radius;
   padding: 8px 35px 8px 10px;
-  width: 100%;
+  width: -webkit-fill-available;
+  width: -moz-fill-available;
+  width: -o-fill-available;
+  width: -ms-fill-available;
   font-family: $font-family;
   font-weight: 500;
   font-size: 14px;
