модальные окна, calc-second, calc-third и другие мелкие доработки

--- a/src/assets/styles/components/_block.scss
+++ b/src/assets/styles/components/_block.scss
@@ -11,12 +11,17 @@
     box-shadow: none;
   }
 
-  @include small-tablet {
-    padding: 7px 10px;
-  }
-
   &--second {
     margin-bottom: 10px;
     padding: 10px;
+  }
+
+  @include small-tablet {
+    margin-bottom: 15px;
+    padding: 10px;
+  }
+
+  @include mobile {
+    margin-bottom: 10px;
   }
 }
