--- a/src/assets/styles/components/_title.scss
+++ b/src/assets/styles/components/_title.scss
@@ -8,7 +8,11 @@
     font-size: 24px;
 
     @include tablet {
-      font-size: 30px;
+      font-size: 20px;
+    }
+
+    @include mobile {
+      font-size: 18px;
     }
   }
 
