работа со стилями

--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -1,13 +1,13 @@
 @import "variables";
 @import "settings";
 @import "breakpoint";
-@import "block";
-@import "tooltip";
-@import "checkbox";
-@import "title";
-@import "accordion";
-@import "input";
-@import "btn";
-@import "calc-item";
-@import "tabs";
-@import "select"
+@import "components/block";
+@import "components/tooltip";
+@import "components/checkbox";
+@import "components/title";
+@import "components/accordion";
+@import "components/input";
+@import "components/btn";
+@import "components/calc-item";
+@import "components/tabs";
+@import "components/select";
