--- a/frontend/src/assets/styles/components/_accordion.scss
+++ b/frontend/src/assets/styles/components/_accordion.scss
@@ -65,3 +65,7 @@
   border-bottom: none;
   background: $light-color;
 }
+
+.accordion-list .accordion-item > .accordion-item__summary > .accordion-item__summary-icon--default::before {
+  display: none;
+}
