--- a/frontend/src/assets/styles/components/_calc-item.scss
+++ b/frontend/src/assets/styles/components/_calc-item.scss
@@ -23,7 +23,7 @@
 
   &__label {
     grid-column: 6 span;
-    max-width: 525px;
+    max-width: initial;
 
     @include small-tablet {
       grid-column: 12 span;
