--- a/frontend/src/assets/styles/components/_tabs.scss
+++ b/frontend/src/assets/styles/components/_tabs.scss
@@ -27,6 +27,11 @@
   padding: 0;
 }
 
+.tabs-component-tab-a.is-active {
+  background-color: #1b6aff;
+  box-shadow: $shadow-btn--active;
+}
+
 .tabs-component-tab {
   color: #999;
   font-size: 14px;
@@ -63,6 +68,8 @@
   }
 
   .tabs-component-tab.is-active {
+    background-color: #b3d3ea;
+    color: #2c5777;
   }
 }
 
